--- a/index.ipynb
+++ b/index.ipynb
@@ -91,18 +91,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "None\n"
+     ]
+    }
+   ],
    "source": [
     "# Create two lists with pumpkin names and weights\n",
     "\n",
     "pumpkin = ['A','B','C','D','E','F']\n",
-    "weights = None\n",
+    "weights = [19,14,15,9,10,17]\n",
     "\n",
     "# Combine both lists to create a dictionary\n",
     "\n",
-    "pumpkin_dict = None\n",
+    "pumpkin_dict = \n",
     "\n",
     "print (pumpkin_dict)\n",
     "\n",
