Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -91,14 +91,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "None\n"
+     "ename": "SyntaxError",
+     "evalue": "invalid syntax (<ipython-input-3-c7b1d3fe0788>, line 8)",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;36m  File \u001b[0;32m\"<ipython-input-3-c7b1d3fe0788>\"\u001b[0;36m, line \u001b[0;32m8\u001b[0m\n\u001b[0;31m    pumpkin_dict = pumpkin:weights\u001b[0m\n\u001b[0m                          ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m invalid syntax\n"
      ]
     }
    ],
@@ -110,7 +111,7 @@
     "\n",
     "# Combine both lists to create a dictionary\n",
     "\n",
-    "pumpkin_dict = \n",
+    "pumpkin_dict = dictpumpkin:weights\n",
     "\n",
     "print (pumpkin_dict)\n",
     "\n",
