Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -91,15 +91,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
-     "ename": "SyntaxError",
-     "evalue": "invalid syntax (<ipython-input-3-c7b1d3fe0788>, line 8)",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;36m  File \u001b[0;32m\"<ipython-input-3-c7b1d3fe0788>\"\u001b[0;36m, line \u001b[0;32m8\u001b[0m\n\u001b[0;31m    pumpkin_dict = pumpkin:weights\u001b[0m\n\u001b[0m                          ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m invalid syntax\n"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{'A': 19, 'B': 14, 'C': 15, 'D': 9, 'E': 10, 'F': 17}\n"
      ]
     }
    ],
@@ -111,7 +110,7 @@
     "\n",
     "# Combine both lists to create a dictionary\n",
     "\n",
-    "pumpkin_dict = dictpumpkin:weights\n",
+    "pumpkin_dict = dict(zip(pumpkin,weights))\n",
     "\n",
     "print (pumpkin_dict)\n",
     "\n",
@@ -136,7 +135,7 @@
     "def calculate_mu(x):\n",
     "\n",
     "    # USe the formula for mu given above\n",
-    "    d = None   \n",
+    "    d = No \n",
     "\n",
     "    return (d)   \n",
     "\n",
