Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -148,7 +148,8 @@
     "def calculate_mu(x):\n",
     "\n",
     "    # USe the formula for mu given above\n",
-    "    d = \n",
+    "    for i in x.values\n",
+    "    d =\n",
     "\n",
     "    return (d)   \n",
     "\n",
