Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -148,8 +148,10 @@
     "def calculate_mu(x):\n",
     "\n",
     "    # USe the formula for mu given above\n",
-    "    for i in x.values\n",
-    "    d =\n",
+    "    totalsum=0\n",
+    "    for i in x.values:\n",
+    "        totalsum+=i\n",
+    "    totalsum/len(x.items())\n",
     "\n",
     "    return (d)   \n",
     "\n",
