Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -126,22 +126,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "6"
+       "dict_values([19, 14, 15, 9, 10, 17])"
       ]
      },
-     "execution_count": 15,
+     "execution_count": 19,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "pumpkin_dict.items())"
+    "pumpkin_dict.values()"
    ]
   },
   {
@@ -168,10 +168,8 @@
     "def calculate_mu(x):\n",
     "\n",
     "    # USe the formula for mu given above\n",
-    "    totalsum=0\n",
-    "    for i in x.values:\n",
-    "        totalsum+=i\n",
-    "    d= totalsum/len(x.items())\n",
+    "    \n",
+    "    d= x/len(x.items())\n",
     "\n",
     "    return (d)   \n",
     "\n",
