--- a/index.ipynb
+++ b/index.ipynb
@@ -244,7 +244,7 @@
     "n = 2 \n",
     "\n",
     "# Use itertools.combinations() to generate and print a list of combinations\n",
-    "combs = itertools.combinations(range())\n",
+    "combs = itertools.combinations(pumpkin_dict.items())),pumpkin_dict.values())\n",
     "\n",
     "\n",
     "# Using 2 samples, we can see 15 possible combinations as below:\n",
