--- a/index.ipynb
+++ b/index.ipynb
@@ -236,16 +236,32 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 45,
    "metadata": {},
    "outputs": [
     {
-     "ename": "SyntaxError",
-     "evalue": "invalid syntax (<ipython-input-41-8d03ffb788f5>, line 5)",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;36m  File \u001b[0;32m\"<ipython-input-41-8d03ffb788f5>\"\u001b[0;36m, line \u001b[0;32m5\u001b[0m\n\u001b[0;31m    combs = itertools.combinations(pumpkin_dict.items())),pumpkin_dict.values())\u001b[0m\n\u001b[0m                                                        ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m invalid syntax\n"
-     ]
+     "data": {
+      "text/plain": [
+       "[('A', 'B'),\n",
+       " ('A', 'C'),\n",
+       " ('A', 'D'),\n",
+       " ('A', 'E'),\n",
+       " ('A', 'F'),\n",
+       " ('B', 'C'),\n",
+       " ('B', 'D'),\n",
+       " ('B', 'E'),\n",
+       " ('B', 'F'),\n",
+       " ('C', 'D'),\n",
+       " ('C', 'E'),\n",
+       " ('C', 'F'),\n",
+       " ('D', 'E'),\n",
+       " ('D', 'F'),\n",
+       " ('E', 'F')]"
+      ]
+     },
+     "execution_count": 45,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
@@ -253,9 +269,9 @@
     "n = 2 \n",
     "\n",
     "# Use itertools.combinations() to generate and print a list of combinations\n",
-    "combs = itertools.combinations(,2)\n",
+    "combs = itertools.combinations(pumpkin_dict.keys(),2)\n",
     "\n",
-    "\n",
+    "list(combs)\n",
     "# Using 2 samples, we can see 15 possible combinations as below:\n",
     "# [('A', 'B'), ('A', 'C'), ('A', 'D'), ('A', 'E'), ('A', 'F'), ('B', 'C'), ('B', 'D'), \n",
     "#  ('B', 'E'), ('B', 'F'), ('C', 'D'), ('C', 'E'), ('C', 'F'), ('D', 'E'), ('D', 'F'), \n",
